Optimize the display content of target candidate list when navigate from mapper.xml files to Java/Kotlin files.